<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="ballot_image_description">A hand holding a ballot.</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="representative_photo_description">Representative photo</string>
    <string name="web_icon_description">Web icon</string>
    <string name="facebook_icon_description">Facebook icon</string>
    <string name="twitter_icon_description">Twitter icon</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voter_info_error">Voter info unavailable.</string>
    <string name="follow_election">Follow election</string>
    <string name="unfollow_election">Unfollow election</string>
    <string name="correspondence_address">Correspondence address</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="no_representatives_found">No representatives found.</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to search by location.</string>
</resources>
